--- a/Week1Assignment-checkpoint.ipynb
+++ b/Week1Assignment-checkpoint.ipynb
@@ -177,6 +177,57 @@
     "n = int(input(\"Enter a number: \"))\n",
     "print(decimalToBinary(n))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "06df8306-e79e-46aa-87b4-5d75ffc0897d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter first number:  5\n",
+      "Enter second number:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GCD is: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "def gcd(a, b):\n",
+    "    while b != 0:\n",
+    "        a, b = b, a % b\n",
+    "    return a\n",
+    "\n",
+    "x = int(input(\"Enter first number: \"))\n",
+    "y = int(input(\"Enter second number: \"))\n",
+    "\n",
+    "print(\"GCD is:\", gcd(x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15bb3fb2-eec8-40cb-856a-fd4b70a4f572",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5286ed0e-6729-438b-b344-f6ade1bbb05e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
