Simple Linear Regression

--- a/MLday2.ipynb
+++ b/MLday2.ipynb
@@ -2,10 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b2286788-17b7-4a2a-bd63-2c02f6824b87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.info of      symboling normalized_losses         make fuel_type aspiration num_doors  \\\n",
+       "0            3                 ?  alfa-romero       gas        std       two   \n",
+       "1            3                 ?  alfa-romero       gas        std       two   \n",
+       "2            1                 ?  alfa-romero       gas        std       two   \n",
+       "3            2               164         audi       gas        std      four   \n",
+       "4            2               164         audi       gas        std      four   \n",
+       "..         ...               ...          ...       ...        ...       ...   \n",
+       "200         -1                95        volvo       gas        std      four   \n",
+       "201         -1                95        volvo       gas      turbo      four   \n",
+       "202         -1                95        volvo       gas        std      four   \n",
+       "203         -1                95        volvo    diesel      turbo      four   \n",
+       "204         -1                95        volvo       gas      turbo      four   \n",
+       "\n",
+       "      body_style drive_wheels engine_location  wheel_base  ...  engine_size  \\\n",
+       "0    convertible          rwd           front        88.6  ...          130   \n",
+       "1    convertible          rwd           front        88.6  ...          130   \n",
+       "2      hatchback          rwd           front        94.5  ...          152   \n",
+       "3          sedan          fwd           front        99.8  ...          109   \n",
+       "4          sedan          4wd           front        99.4  ...          136   \n",
+       "..           ...          ...             ...         ...  ...          ...   \n",
+       "200        sedan          rwd           front       109.1  ...          141   \n",
+       "201        sedan          rwd           front       109.1  ...          141   \n",
+       "202        sedan          rwd           front       109.1  ...          173   \n",
+       "203        sedan          rwd           front       109.1  ...          145   \n",
+       "204        sedan          rwd           front       109.1  ...          141   \n",
+       "\n",
+       "     fuel_system  bore  stroke compression_ratio horsepower  peak_rpm  \\\n",
+       "0           mpfi  3.47    2.68               9.0        111      5000   \n",
+       "1           mpfi  3.47    2.68               9.0        111      5000   \n",
+       "2           mpfi  2.68    3.47               9.0        154      5000   \n",
+       "3           mpfi  3.19    3.40              10.0        102      5500   \n",
+       "4           mpfi  3.19    3.40               8.0        115      5500   \n",
+       "..           ...   ...     ...               ...        ...       ...   \n",
+       "200         mpfi  3.78    3.15               9.5        114      5400   \n",
+       "201         mpfi  3.78    3.15               8.7        160      5300   \n",
+       "202         mpfi  3.58    2.87               8.8        134      5500   \n",
+       "203          idi  3.01    3.40              23.0        106      4800   \n",
+       "204         mpfi  3.78    3.15               9.5        114      5400   \n",
+       "\n",
+       "    city_mpg highway_mpg  price  \n",
+       "0         21          27  13495  \n",
+       "1         21          27  16500  \n",
+       "2         19          26  16500  \n",
+       "3         24          30  13950  \n",
+       "4         18          22  17450  \n",
+       "..       ...         ...    ...  \n",
+       "200       23          28  16845  \n",
+       "201       19          25  19045  \n",
+       "202       18          23  21485  \n",
+       "203       26          27  22470  \n",
+       "204       19          25  22625  \n",
+       "\n",
+       "[205 rows x 26 columns]>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -16,7 +79,9 @@
     "           \"height\", \"curb_weight\", \"engine_type\", \"num_cylinders\", \"engine_size\", \"fuel_system\",\n",
     "           \"bore\", \"stroke\", \"compression_ratio\", \"horsepower\", \"peak_rpm\", \"city_mpg\", \"highway_mpg\", \"price\"]\n",
     "\n",
-    "data = pd.read_csv(url, name"
+    "data = pd.read_csv(url, names=columns)\n",
+    "\n",
+    "data.info"
    ]
   },
   {
