--- a/SimpleLinearRegression.ipynb
+++ b/SimpleLinearRegression.ipynb
@@ -645,14 +645,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "94dbd9b3-f4f5-46fb-8ebe-7c6cdf6bac37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted monthly bill for 5 hours of daily usage:  72.00704225352112\n"
+     ]
+    }
+   ],
    "source": [
     "#Now let's predict the monthly bill of a household that uses electricity for 5 hours a day\n",
-    "predicted_bil_5_hours = model.predict(np.array([[5]]))\n",
-    "print(\"Predicted monthly bill for 5 hours of daily usage: \", predicted_bill_5_hours[0]"
+    "predicted_bill_5_hours = model.predict(np.array([[5]]))\n",
+    "print(\"Predicted monthly bill for 5 hours of daily usage: \", predicted_bill_5_hours[0])"
    ]
   }
  ],
